revert old header portfolio and fix spacing

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -29,11 +29,25 @@ body {
 .no-bg-body {
   background: url("#"); 
   background-color: #FFF;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .color-bg {
   background: url("#");
   background-color: #FCFCFC;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 h1 {
@@ -61,7 +75,7 @@ h3 {
   text-align: center;
   font-weight: bold;
   font-size: 25px;
-}
+} 
 
 h4 {
   color: #000;
@@ -101,11 +115,10 @@ header {
   color: #fff;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
-  height: 50px;
+  height: 58px;
   width: 100%;
   padding-left: 50px;
-  padding-top: 0px;
-  margin-bottom: -6px;
+  padding-top: 10px;
 }
 
 header a {
@@ -140,7 +153,7 @@ p {
   font-family: 'Raleway', sans-serif;
   padding-right: 100px;
   text-align: left;
-  margin-top: -150px;
+  
 }
 
 .about-l {
@@ -148,7 +161,7 @@ p {
   font-family: 'Raleway', sans-serif;
   padding-left: 75px;
   text-align: left;
-  margin-top: -150px;
+  
 }
 
 .about-img {
@@ -156,6 +169,7 @@ p {
 }
 
 .app-img-l {
+  margin-left: -50px;
  
 }
 
@@ -192,6 +206,7 @@ ol {
 
 .navb {
   text-align: right; 
+  padding-right: 200px; 
 }
 
 .navb a {
@@ -207,7 +222,8 @@ ol {
 }
 
 .icons {
-  padding-top: 5px;
+  padding-top: 11px;
+  padding-bottom: 5px;
 }
 
 
